--- a/index.html
+++ b/index.html
@@ -14,28 +14,32 @@
         <div id="top-right"></div>
       </div>
 
-      <div id="mainbox ">
-        <div class="column">
-        <ul class="flex-container row">
-          <li class="flex-item"></li>
-          <li class="flex-item"></li>
-        </ul>
-        <ul class="flex-container row">
-          <li class="flex-item"></li>
-          <li class="flex-item"></li>
-        </ul>
-      </div>
-      <div class="column">
-        <ul class="flex-container row">
-          <li class="flex-item"></li>
-          <li class="flex-item"></li>
-        </ul>
-        <ul class="flex-container row">
-          <li class="flex-item"></li>
-          <li class="flex-item"></li>
-        </ul>
-      </div>
-      </div>
+      <div id="mainbox">
+        <div class="row">
+          <div class="column">
+            <ul class="flex-container">
+              <li class="flex-item"></li>
+              <li class="flex-item"></li>
+            </ul>
+            <ul class="flex-container">
+              <li class="flex-item"></li>
+              <li class="flex-item"></li>
+            </ul>
+          </div>
+          <div class="column">
+            <ul class="flex-container">
+              <li class="flex-item"></li>
+              <li class="flex-item"></li>
+            </ul>
+            <ul class="flex-container">
+              <li class="flex-item"></li>
+              <li class="flex-item"></li>
+            </ul>
+          </div>
+        </div>
+        <div class="row-door">
+          <div id="square"><div id="circle"></div></div>
+        </div>
       </div>
     </div>
   </body>
