--- a/index.html
+++ b/index.html
@@ -9,13 +9,15 @@
   </head>
   <body>
     <div class="container">
+      <div id="smoker"></div>
+
       <div class="box">
         <div id="top-left"></div>
         <div id="top-right"></div>
       </div>
 
       <div id="mainbox">
-        <div class="row">
+        <div>
           <div class="column">
             <ul class="flex-container">
               <li class="flex-item"></li>
@@ -37,8 +39,10 @@
             </ul>
           </div>
         </div>
-        <div class="row-door">
+        <div class="box">
+          <div></div>
           <div id="square"><div id="circle"></div></div>
+          <div></div>
         </div>
       </div>
     </div>
